--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Unit-Markz | Инновации на пальцах</title>
     <meta name="description" content="Образовательная платформа нового поколения. Технологии, которые работают на вас.">
 
-    <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='24' fill='%230F172A'/%3E%3Cpath d='M32 32 V60 A18 18 0 0 0 68 60 V45' stroke='%234F46E5' stroke-width='8' stroke-linecap='round' fill='none'/%3E%3Ccircle cx='68' cy='32' r='6' fill='%2310B981'/%3E%3C/svg%3E" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
